Added new folder and edited recipes
The new folder is images and it's where all the images will go for the
project, the edits I made to sugar-cookies.html is that I Added
the image.jpeg from images and also added directions and instructions
for how to make the cookies.

--- a/recipes/sugar-cookies.html
+++ b/recipes/sugar-cookies.html
@@ -8,5 +8,22 @@
 </head>
 <body>
     <h1>Sugar Cookie Recipe</h1>
+    <img src="../images/image.jpeg">
+    <p>sugar cookies made with milk and butter</p>
+    <p>The recipe is a simple formula used for decades by my family.</p>
+    <h2>Ingredients</h2>
+    <ul>
+        <li>Flour</li>
+        <li>Baking Soda</li>
+        <li>Salt</li>
+        <li>margarine</li>
+        <li>sugar</li>
+    </ul>
+    <h2>Directions</h2>
+    <ol>
+        <li>In a medium bowl, stir together the flour, baking soda, and salt.</li>
+        <li>In a large bowl, cream together the margarine and 2 cups sugar until light and fluffy. Beat in the eggs one at a time, then the vanilla. Gradually stir in the dry ingredients until just blended.</li>
+        <li>Wrap dough with plastic wrap and chill for 30 minutes to 1 hour.</li>
+    </ol>
 </body>
 </html>
